Arreglar costo y equipos

--- a/torneo/templates/torneo/torneo_list.html
+++ b/torneo/templates/torneo/torneo_list.html
@@ -1,6 +1,12 @@
  {% extends "base.html" %}
  {% load staticfiles %}
  {% block main %}
+ 
+ {% if messages %} {% for message in messages %}
+ <div class="{{ message.tags }} messages">
+   <span class="">{{ message }}</span> {% endfor %}
+ </div>
+ {% endif %}
 
 <div class="title-container">
   <h2 class="admin-title">Torneos</h2>
