--- a/torneo/templates/torneo/agregar_torneo.html
+++ b/torneo/templates/torneo/agregar_torneo.html
@@ -59,7 +59,7 @@
     <div class="col s12">
       <div class="container-button">
         <a href="{% url 'torneo:lista_torneos' %}" class="cancel">Cancelar</a>
-        <button class="submit" type="submit">Actualizar</button>
+        <button class="submit" type="submit">Guardar</button>
       </div>
     </div>
   </div>
