--- a/equipo/templates/equipo/equipo_list.html
+++ b/equipo/templates/equipo/equipo_list.html
@@ -13,7 +13,7 @@
       <span class="title"><a href="{% url 'equipo:detalle_equipo' Equipo.id %}">{{ Equipo.nombre }}</a></span>
       <p>Representante: {{ Equipo.representante }}</p>
       <div class="secondary-content">
-        <a href="{% url 'equipo:borrar_equipo' Equipo.id %}">
+        <a href="#" data-target="delete" data-form="{% url 'equipo:borrar_equipo' Equipo.id %}" class="delete-button"> 
           <i class="medium material-icons icon-red">delete</i>
         </a>
         <a href="{% url 'equipo:editar_equipo' Equipo.id %}">
