--- a/torneo/templates/torneo/torneo_editar.html
+++ b/torneo/templates/torneo/torneo_editar.html
@@ -70,4 +70,15 @@
       </div>
     </div>
 </form>
+<script>
+$('.datepicker').pickadate({
+  selectMonths: true, // Creates a dropdown to control month
+  selectYears: 15, // Creates a dropdown of 15 years to control year,
+  today: 'Today',
+  clear: 'Clear',
+  close: 'Ok',
+  format: 'yyyy-mm-dd',
+  closeOnSelect: true // Close upon selecting a date,
+});
+</script>
 {% endblock %}
