--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,63 +1,74 @@
 .login {
-    display: flex;
-    height: 100vh;
-
+  display: flex;
+  height: 100vh;
 }
 
-.login > .image-container{
-    background-image: url("../static_media/cancha.jpg");
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    flex-grow: 2;
+@media (min-width: 100px) and (max-width: 768px) {
+  .image-container {
+    display: none !important;
+  }
+  .login-container {
+    max-width: 100% !important;
+  }
 }
 
-h2{
-    color: #fff !important;
-    font-size: 3.3em;
-    font-weight: bold;
-    line-height: 1.5;
-    letter-spacing: 29;
+.login>.image-container {
+  background-image: url("../static_media/cancha.jpg");
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width:100%;
+  max-width: 55%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-h4{
-    color: #fff !important;
-    font-size: 1.5em;
-    line-height: 1.2;
-    letter-spacing: 12;
+h2 {
+  color: #fff !important;
+  font-weight: bold;
 }
 
-.login > .image-container >.text{
 
-    width: 40%;
-
+.login>.image-container>.text {
+  width: 75%;
 }
 
 .login-container {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 45%;
+  height: 100%;
+  justify-content: center;
 }
 
-.login-container > .form-container {
-
-    height: calc(100vh - 42px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
+.login-container>.form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.login-container > .logo-container > img {
-
-    height: 42px;
-
+.login-container>.form-container>form {
+  width:70%;
 }
 
-.admin-container  {
-    display: flex;
-    justify-content: space-between;
+form>.cta-container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login-container>img {
+  height: 100px;
+}
+
+.admin-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.white-text {
+  color: #fff;
 }
