--- a/static/index.css
+++ b/static/index.css
@@ -219,6 +219,8 @@ select {
   height: 100%;
   overflow: hidden;
   width: 100%;
+  -webkit-filter: brightness(0.5);
+  filter: brightness(0.5);
 }
 
 @media only screen and (max-width: 768px) {
