--- a/equipo/templates/equipo/agregar_equipo.html
+++ b/equipo/templates/equipo/agregar_equipo.html
@@ -2,7 +2,9 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block main %}
-
+<div class="title-container">
+  <h2>Agregar Equipo<h2>
+</div>
 <form  class="container flex" action="{% url 'equipo:agregar_equipo' %}" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="image-column">
