--- a/equipo/templates/equipo/equipo_update.html
+++ b/equipo/templates/equipo/equipo_update.html
@@ -2,7 +2,9 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block main %}
-
+<div class="title-container">
+  <h2>Editar Equipo<h2>
+</div>
 <form  class="container flex" action="{% url 'equipo:editar_equipo' equipo.id %}" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="image-column">
