--- a/jugadora/templates/jugadora/agregar_jugadora.html
+++ b/jugadora/templates/jugadora/agregar_jugadora.html
@@ -2,6 +2,9 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block main %}
+<div class="title-container">
+  <h2>Agregar Jugadora<h2>
+</div>
 
     {% if equipo == '' %}
         <form class="container flex" method="POST" enctype="multipart/form-data" novalidate action="{% url 'jugadora:agregar_jugadora' %}">
