--- a/jugadora/templates/jugadora/editar_jugadora.html
+++ b/jugadora/templates/jugadora/editar_jugadora.html
@@ -2,7 +2,9 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 {% block main %}
-
+<div class="title-container">
+  <h2>Editar Jugadora<h2>
+</div>
 <form class="container flex" method="POST" enctype="multipart/form-data" novalidate action="{% url 'jugadora:editar_jugadora' jugadora.id %}">
   {% csrf_token %}
   <div class="image-column">
