--- a/jugadora/templates/jugadora/jugadora_confirm_delete.html
+++ b/jugadora/templates/jugadora/jugadora_confirm_delete.html
@@ -1,8 +1,8 @@
 <form action="{% url 'jugadora:eliminar_jugadora' jugadora.id %}" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="modal-content">
-    <h4>Modal Header</h4>
-    <p>A bunch of text</p>
+    <h4>Eliminar Jugadora {{ jugadora.Nombre }}</h4>
+    <p>Esta seguro de que quiere eliminar {{ jugadora.Nombre }} de manera permanente?</p>
   <div class="modal-footer">
     <button id="cancel" type="button" class="cancel cancel-delete" data-target="delete">Cancelar</button>
     <button class="delete-color" type="submit">Eliminar</button>
