--- a/jugadora/templates/jugadora/jugadora_detail.html
+++ b/jugadora/templates/jugadora/jugadora_detail.html
@@ -33,7 +33,7 @@
       </div>
       <div class="input-field col s12 m6">
         <input disabled value="{{jugadora.Numero}}" id="disabled" type="text" style="color: #b4c0c6; border-bottom: 2px solid;">
-        <label for="disabled">Numero</label>
+        <label for="disabled">Numero de playera</label>
       </div>
       <div class="input-field col s12 m6">
         <input disabled value="{{jugadora.get_Posicion_display}}" id="disabled" type="text" style="color: #b4c0c6; border-bottom: 2px solid;">
