--- a/jugadora/templates/jugadora/ver_jugadoras.html
+++ b/jugadora/templates/jugadora/ver_jugadoras.html
@@ -23,7 +23,7 @@
         <a href="{% url 'jugadora:detalle_jugadora' jugadora.id %}"><span class="title">{{ jugadora.Nombre}} {{ jugadora.Apellido }}</span></a>
       <p><strong>Fecha de nacimiento:</strong> {{ jugadora.Nacimiento }}</p>
       <div class="flex">
-        <p><strong>Número:</strong> {{ jugadora.Numero }}</p>&nbsp;&nbsp;
+        <p><strong>Número de playera:</strong> {{ jugadora.Numero }}</p>&nbsp;&nbsp;
         <p><strong>Posición:</strong> {{ jugadora.Posicion }}</p>
       </div>
       <div class="secondary-content">
