Cambiar color Calendario

--- a/equipo/templates/equipo/equipo_detail.html
+++ b/equipo/templates/equipo/equipo_detail.html
@@ -99,6 +99,7 @@
     </ul>
     </div>
   </div>
+</div>
   <script>
   document.getElementById('player').onclick = function() {
     if (document.getElementById('player-title').className === 'hidden') {
