--- a/jugadora/templates/jugadora/editar_jugadora.html
+++ b/jugadora/templates/jugadora/editar_jugadora.html
@@ -78,7 +78,7 @@
       </p>
       {{ form.Notas.errors }}
     <div class="container-button">
-      <div class="cancel">Cancelar</div>
+      <a href="{% url 'jugadora:ver_jugadoras' %}" class="cancel">Cancelar</a>
       <button class="submit" type="submit">Enviar</button>
     </div>
   </div>
