--- a/static/index.css
+++ b/static/index.css
@@ -414,6 +414,10 @@ h4 {
     -webkit-appearance: none;
 }
 
-.datepicker-date-display {
+.datepicker-date-display, .is-selected, .timepicker-digital-display, .clockpicker-tick:hover, .clockpicker-canvas line, .clockpicker-canvas-bearing, .clockpicker-canvas-bg {
   background-color: #ff78b8 !important;
+}
+
+.datepicker-today, .datepicker-done, .dropdown-content li>a, .dropdown-content li>span, .timepicker-close{
+  color:#ff78b8 !important;
 }
