--- a/templates/nav.html
+++ b/templates/nav.html
@@ -25,6 +25,8 @@
   <ul class="sidenav" id="mobile-demo">
     <li><div class="wellcome-pack"><h6 id="paketaxo">¡BIENVENIDO POLICARPIO!</h6></div></li>
         <li><a href="{% url 'equipo:lista_equipos' %}">EQUIPO</a></li>
+        <li><a href="{% url 'jugadora:ver_jugadoras' %}">JUGADORAS</a></li>
+        <li><a href="{% url 'torneo:lista_torneos' %}">TORNEOS</a></li>
         <li><a href="#">CONVOCATORIAS</a></li>
         <li><a href="#">LIGAS</a></li>
         <li><a href="#">GALERIA</a></li>
