--- a/torneo/templates/torneo/agregar_torneo.html
+++ b/torneo/templates/torneo/agregar_torneo.html
@@ -28,6 +28,14 @@
         </label>
       <input type="date" name="{{form.fechaInicio.html_name}}" required="" class="datepicker" id="{{form.fechaInicio.id_for_label}}" /> {{ form.fechaInicio.errors }}
     </div>
+
+      <div class="col s12">
+          <br>
+          <label>
+              {{ form.fechaJunta.label_tag }}
+            </label>
+          <input type="date" name="{{form.fechaJunta.html_name}}" required="" class="datepicker" id="{{form.fechaJunta.id_for_label}}" /> {{ form.fechaJunta.errors }}
+      </div>
     <div class="col s12" style="margin-top:24px">
       <div class="file-field input-field">
         <div class="btn">
@@ -47,6 +55,15 @@
         <input name="costo" type="number" min="0.00" max="10000.00" step="0.01" />
       </p>
       {{ form.costo.errors }}
+    </div>
+      <div class="col s12">
+          <p>
+            <label>
+              {{ form.costoCredencial.label_tag }}
+            </label>
+            <input name="costo" type="number" min="0.00" max="10000.00" step="0.01" />
+          </p>
+          {{ form.costoCredencial.errors }}
     </div>
     <div class="col s12">
       <p>
