--- a/torneo/templates/torneo/agregar_torneo.html
+++ b/torneo/templates/torneo/agregar_torneo.html
@@ -61,7 +61,7 @@
             <label>
               {{ form.costoCredencial.label_tag }}
             </label>
-            <input name="costo" type="number" min="0.00" max="10000.00" step="0.01" />
+            <input name="costoCredencial" type="number" min="0.00" max="10000.00" step="0.01" />
           </p>
           {{ form.costoCredencial.errors }}
     </div>
