--- a/templates/nav.html
+++ b/templates/nav.html
@@ -4,19 +4,16 @@
       <div class="navito">
       <a href="#!" class="brand-logo">
          <img class="logo-plidi" src="{% static 'static_media/logo.svg' %}"/>
-
       </a>
-
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><div class="wellcome-pack"><h6 id="paketaxo">¡BIENVENIDO {{ user.first_name | upper }}!</h6></div></li>
-        <li><a href="{% url 'equipo:lista_equipos' %}">EQUIPOS</a></li>
+        <li><a href="{% url 'equipo:lista_equipos' %}">EQUIPO</a></li>
         <li><a href="{% url 'jugadora:ver_jugadoras' %}">JUGADORAS</a></li>
         <li><a href="{% url 'torneo:lista_torneos' %}">TORNEOS</a></li>
-        <li><a href="#">CONVOCATORIAS</a></li>
+        <li><a href="{% url 'administrador:lista_administrador' %}">ADMINISTRADORES</a></li>
         <li><a href="#">LIGAS</a></li>
         <li><a href="{% url 'logout' %}"><i class="material-icons">exit_to_app</i></a></li>
-
       </ul>
       </div>
     </div>
