--- a/torneo/templates/torneo/agregar_torneo.html
+++ b/torneo/templates/torneo/agregar_torneo.html
@@ -30,12 +30,15 @@
     </div>
 
       <div class="col s12">
-          <br>
-          <label>
-              {{ form.fechaJunta.label_tag }}
-            </label>
-          <input type="date" name="{{form.fechaJunta.html_name}}" required="" class="datepicker" id="{{form.fechaJunta.id_for_label}}" /> {{ form.fechaJunta.errors }}
-      </div>
+            <p>
+              <label>
+                  {{ form.fechaJunta.label_tag }}
+              </label>
+            {{ form.fechaJunta }}
+
+          </p>
+            {{ form.fechaJunta.errors }}
+        </div>
     <div class="col s12" style="margin-top:24px">
       <div class="file-field input-field">
         <div class="btn">
@@ -64,7 +67,7 @@
             <input name="costoCredencial" type="number" min="0.00" max="10000.00" step="0.01" />
           </p>
           {{ form.costoCredencial.errors }}
-    </div>
+      </div>
     <div class="col s12">
       <p>
         <label>
