--- a/torneo/templates/torneo/torneo_editar.html
+++ b/torneo/templates/torneo/torneo_editar.html
@@ -30,7 +30,7 @@
           <label>
               {{ form.fechaInicio.label_tag }}
           </label>
-        {{ form.fechaInicio }}
+        <input type="date" name="fechaInicio" value="{{torneo.fechaInicio | date:"Y-m-d"}}" class="datepicker" required id="id_fechaInicio">
       </p>
         {{ form.fechaInicio.errors }}
       </div>
@@ -54,6 +54,7 @@
         </p>
         {{ form.costo.errors }}
       </div>
+      {% if torneo.activo %}
       <div class="col s12">
         <p>
           <label>
@@ -62,6 +63,7 @@
         </p>
         {{ form.equipos.errors }}
       </div>
+      {% endif %}
       <div class="col s12">
         <div class="container-button">
           <a href="{% url 'torneo:lista_torneos' %}" class="cancel">Cancelar</a>
@@ -70,15 +72,4 @@
       </div>
     </div>
 </form>
-<script>
-$('.datepicker').pickadate({
-  selectMonths: true, // Creates a dropdown to control month
-  selectYears: 15, // Creates a dropdown of 15 years to control year,
-  today: 'Today',
-  clear: 'Clear',
-  close: 'Ok',
-  format: 'yyyy-mm-dd',
-  closeOnSelect: true // Close upon selecting a date,
-});
-</script>
 {% endblock %}
