Terminar vista computadora main

--- a/landing/templates/landing/main.html
+++ b/landing/templates/landing/main.html
@@ -2,15 +2,18 @@
 {% load static %}
 {% block main %}
 <div class="hero">
+  <div class="image-hero"></div>
   <div class="container">
-    <h1 class="jumbo">PLAN LIBÉLULA DESARROLLO INTEGRAL</h1>
-    <h6>PLIDI es una estrategia pensada para el desarrollo
-      de la mujer brindándoles herramientas como la
-      educación emocional, la disciplina del deporte y los
-      hábitos de cuidar su alimentación.</h6>
-      <div class="cta-container">
-        <div class="primary-button button">
-          Conoce más
+    <div class="text">
+      <h1>PLAN LIBÉLULA DESARROLLO INTEGRAL</h1>
+      <h6>PLIDI es una estrategia pensada para el desarrollo
+        de la mujer brindándoles herramientas como la
+        educación emocional, la disciplina del deporte y los
+        hábitos de cuidar su alimentación.</h6>
+        <div class="cta-container">
+          <div class="primary-button button white">
+            <strong>Conoce más</strong>
+          </div>
         </div>
       </div>
   </div>
@@ -21,43 +24,49 @@
    <div class="card-container">
      <div class="card">
        <div class="card-image waves-effect waves-block waves-light">
-         <img class="activator" src="images/office.jpg">
+         <div class="container">
+           <img class="team" src="{% static 'static_media/USA.png' %}">
+           <div class="vs-container">
+             <div class="circle vs-circle">VS</div>
+           </div>
+           <img class="team" src="{% static 'static_media/logo2.png' %}">
+         </div>
        </div>
        <div class="card-content">
-         <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-         <p><a href="#">This is a link</a></p>
-       </div>
-       <div class="card-reveal">
-         <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-         <p>Here is some more information about this product that is only revealed once clicked on.</p>
+         <p>Jueves, Marzo 12 - 12:30 AM</p>
+         <p>Cancha Querétaro 2000</p>
        </div>
      </div>
 
      <div class="card">
        <div class="card-image waves-effect waves-block waves-light">
-         <img class="activator" src="images/office.jpg">
+         <div class="container">
+           <img class="team" src="{% static 'static_media/USA.png' %}">
+           <div class="vs-container">
+             <div class="circle vs-circle">VS</div>
+           </div>
+           <img class="team" src="{% static 'static_media/logo2.png' %}">
+         </div>
        </div>
        <div class="card-content">
-         <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-         <p><a href="#">This is a link</a></p>
-       </div>
-       <div class="card-reveal">
-         <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-         <p>Here is some more information about this product that is only revealed once clicked on.</p>
+         <p>Jueves, Marzo 12 - 12:30 AM</p>
+         <p>Cancha Querétaro 2000</p>
        </div>
      </div>
 
      <div class="card">
        <div class="card-image waves-effect waves-block waves-light">
-         <img class="activator" src="images/office.jpg">
+         <div class="container">
+           <img class="team" src="{% static 'static_media/USA.png' %}">
+           <div class="vs-container">
+             <div class="circle vs-circle">VS</div>
+           </div>
+           <img class="team" src="{% static 'static_media/logo2.png' %}">
+         </div>
        </div>
        <div class="card-content">
-         <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-         <p><a href="#">This is a link</a></p>
-       </div>
-       <div class="card-reveal">
-         <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-         <p>Here is some more information about this product that is only revealed once clicked on.</p>
+         <p>Jueves, Marzo 12 - 12:30 AM</p>
+         <p>Cancha Querétaro 2000</p>
        </div>
      </div>
 
