--- a/static/index.css
+++ b/static/index.css
@@ -421,3 +421,35 @@ h4 {
 .datepicker-today, .datepicker-done, .dropdown-content li>a, .dropdown-content li>span, .timepicker-close{
   color:#ff78b8 !important;
 }
+
+.datepicker-table td.is-today {
+  color: #e1aac4;
+}
+
+.datepicker-day-button:focus {
+  background-color: #e1aac4;
+}
+
+.month-prev:focus{
+  background-color: #e1aac4;
+}
+.month-next:focus{
+  background-color: #e1aac4;
+}
+input:focus{
+ border-bottom: 1px solid #ff78b8 !important;
+ box-shadow: 0 1px 0 0 #ff78b8 !important;
+}
+
+.timepicker-tick:hover { 
+  background: #ff78b8 !important; 
+}
+.timepicker-canvas line { 
+  stroke: #ff78b8 !important; 
+}
+.timepicker-canvas-bearing { 
+  fill: #ff78b8 !important; 
+}
+.timepicker-canvas-bg { 
+  fill: #ff78b8 !important; 
+}
